<resources>
    <string name="app_name">Garage Management System</string>
    <string name="welcome">Welcome</string>
    <string name="client_app_description_text">Mazda Service kết nối nhanh chóng, tiện lợi, mọi yêu cầu của Khách hàng đến với dịch vụ chăm sóc Khách hàng của thương hiệu Mazda tại Việt Nam</string>
    <string name="ng_nh_p">Đăng nhập |</string>
    <string name="register_text">Tạo tài khoản mới</string>
    <string name="email_ho_c_t_n_t_i_kho_n">email hoặc tên tài khoản</string>
    <string name="remember_password_text">Tôi đồng ý với điều khoản dịch vụ của hãng</string>
    <string name="continue_text">Tiếp tục</string>
    <string name="forgot_password_prompt_text">Quên mật khẩu ?</string>
    <string name="notices">Notices</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu3">Menu3</string>
    <string name="garage_image">Garage Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bien_so">Biển số xe</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_payment">paymentActivity</string>

    <string name="customer_info">&#160; Thông tin khách hàng</string>
    <string name="full_name">Họ và tên</string>
    <string name="name_hint">&#160;&#160;&#160; &#160;  Nguyễn Văn A</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="phone_hint">&#160;&#160;&#160; &#160; 0918294122</string>
    <string name="email">Email</string>
    <string name="email_hint">&#160;&#160;&#160; &#160; nguyenvana@gmail.com</string>
    <string name="choose_service">Chọn dịch vụ</string>
    <string name="s_a_ch_a_chung">Sửa chữa chung</string>
    <string name="b_o_h_nh">Bảo hành</string>
    <string name="note">Ghi chú</string>
    <string name="note_hint">&#160;&#160;&#160; &#160; Ghi chú</string>
    <string name="elaborate">Bánh xe của bạn chạy dính sình quá nhiều nên chúng tôi đã lau chùi và vá lại (miễn phí).</string>
    <string name="payment">Thanh Toán</string>
    <string name="title_activity_notification_page">ActivityNotificationPage</string>
    <string name="info_from_the_garage">Info from the Garage</string>
    <string name="title_activity_term_of_service_page">TermOfServicePage</string>
    <string name="privacy_policy_text">Your privacy is important to us. It is THC_Group\'s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, https://autogarageapp.com, and other sites we own and operate. This policy is effective as of 3 April 2021 and was last updated on 3 April 2021.</string>
    <string name="information_collected_detail">Information we collect includes both information you knowingly and actively provide us when using or participating in any of our services and promotions, and any information automatically sent by your devices in the course of accessing our products and services.</string>
    <string name="infomation_we_collect">Infomation We Collect</string>
    <string name="log_data">Log Data</string>
    <string name="when_you_visit_our_website_our_servers_may_automatically_log_the_standard_data_provided_by_your_web_browser_it_may_include_your_device_s_internet_protocol_ip_address_your_browser_type_and_version_the_pages_you_visit_the_time_and_date_of_your_visit_the_time_spent_on_each_page_other_details_about_your_visit_and_technical_details_that_occur_in_conjunction_with_any_errors_you_may_encounter_please_be_aware_that_while_this_information_may_not_be_personally_identifying_by_itself_it_may_be_possible_to_combine_it_with_other_data_to_personally_identify_individual_persons">When you visit our website, our servers may automatically log the standard data provided by your web browser. It may include your device’s Internet Protocol (IP) address, your browser type and version, the pages you visit, the time and date of your visit, the time spent on each page, other details about your visit, and technical details that occur in conjunction with any errors you may encounter. Please be aware that while this information may not be personally identifying by itself, it may be possible to combine it with other data to personally identify individual persons.</string>
    <string name="security_of_your_personal_information">Security of Your Personal Information</string>
    <string name="security_pesonale_data_text">When we collect and process personal information, and while we retain this information, we will protect it within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use, or modification. Although we will do our best to protect the personal information you provide to us, we advise that no method of electronic transmission or storage is 100% secure, and no one can guarantee absolute data security. We will comply with laws applicable to us in respect of any data breach. You are responsible for selecting any password and its overall security strength, ensuring the security of your own information within the bounds of our services.</string>
    <string name="contact_us_text">For any questions or concerns regarding your privacy, you may contact us using the following details: Thinh Dep Trai thinh.nguyenbk2018@hcmut.edu.vn</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_app_compat_with_tool_bar">AppCompatActivityWithToolBar</string>
    <string name="hi_n_m_t_kh_u">Hiện mật khẩu</string>
    <string name="bi_n_s_xe">Biển số xe</string>
    <string name="c_c_d_ch_v">Các dịch vụ</string>
    <string name="h_ng_xe">Hãng xe:</string>
    <string name="xe_c_a">Xe của:</string>
    <string name="n_i_nh_n">Nơi nhận:</string>
    <string name="trung_t_m_1">Trung tâm 1</string>
    <string name="todo">TODO</string>
    <string name="car_image">car image</string>
    <string name="title_activity_momo_payment">MomoPaymentActivity</string>
    <string name="payment_through_momo">"Thanh toán"</string>
    <string name="mapping_through_momo">"Bắt đầu liên kết"</string>
    <string name="link_momo">"Liên kết MoMo"</string>
    <string name="payment_momo">"Thanh toán qua MoMo"</string>
    <string name="not_receive_info">"Không nhận được thông tin"</string>
    <string name="not_receive_info_err">"Không gởi được yêu cầu vui lòng kiểm tra lại"</string>
    <string name="gold_cus">Là thành viên vàng, khách hàng sẽ được sử dụng những dịch vụ khuyến mãi: được miễn phí bảo dưỡng định kỳ, giảm 15% giá khi thanh toán dịch vụ</string>
    <string name="silver_cus">Là thành viên bạc, khách hàng sẽ được sử dụng những dịch vụ khuyến mãi: được miễn phí bảo dưỡng định kỳ, giảm 10% giá khi thanh toán dịch vụ</string>
    <string name="bronze_cus">Là thành viên đồng, khách hàng sẽ được sử dụng những dịch vụ khuyến mãi: giảm 5% giá khi thanh toán dịch vụ</string>
    <string name="guide_booking">Để thực hiện việc đặt lịch, khách hàng nhấn vào icon đặt lịch trong thanh công cụ ở dưới cùng. Khách hàng tiếp tục điển các thông tin cần thiết cho việc đặt lịch. Sau khi hoàn thành thì nhấn nút để gửi thông tin booking của mình.</string>
    <string name="guide_detecting">Để theo dõi quá trình đang thực hiện, khách hàng nhấn vào icon dịch vụ trên thành công cụ ở dưới cùng. Tại đây khách hàng có thể theo dõi trạng thái của các dịch vụ đối với xe, các thông tin dịch vụ; đồng thời khách hàng có thể hủy hay yêu cầu thực hiện lại dịch vụ tại đây.</string>
    <string name="guide_info">Để thao tác với các thông tin cá nhân, khách hàng nhấn icon user trên thanh công cụ ở dưới cùng. Trang thông tin cá nhân khách hàng sẽ hiển thị cùng với các thông tin cơ bản như tên, số điện thoại và ngày sinh. Ngoài ra có thể xem danh sách các xe đã đăng ký của bản thân tại đây.</string>
    <string name="guide_receive_noti">Để xem thông báo liên quan đến dịch vụ của mình, khách hàng chọn icon chuông trong thanh công cụ ở phía trên.</string>
    <string name="guide_cart">Để xem giá tiền dịch vụ, khách hàng chọn icon giỏ hàng trong thanh công cụ ở phía trên.</string>
    <string name="info_service_makeup">Trung tâm hỗ trỡ khách hàng các dịch vụ làm đẹp cho xe như vệ sinh khoang động cơ, vệ sinh nội thất, vệ sịnh ngoại thất, phủ Nano/Ceramic, phủ gầm chống gỉ sét, vệ sinh giàn lạnh điều hòa, dung dịch làm sạch kim phun, dung dịch sục rửa động cơ,...</string>
    <string name="info_service_maintain">Để bảo đảm xe tô luôn vận hành hiệu quả, quy trình bảo dưỡng xe ô tô vô cùng cần thiết. Bất kỳ loại phương tiện nào cũng cần bảo dưỡng một cách định kỳ và đều đặn, bởi xe ô tô qua một thời gian dài sử dụng sẽ bị hao mòn các chi tiết, làm giảm đi chất lượng dầu nhờn và các dung dịch trong xe ô tô. Điều này đòi hỏi quý khách nên có sự bảo dưỡng xe ô tô hoàn hảo để giúp cho chiếc xe ô tô của quý khách luôn được vận hành một cách tốt nhất. Lịch bảo dưỡng xe ô tô có thể thay đổi tùy theo chiếc xe ô tô của quý khách hàng được sử dụng như thế nào. Thường chúng ta sẽ bảo dưỡng ô tô định kỳ sau mỗi 5000 km. Công việc bạn cần làm cho mỗi lần bảo dưỡng định kỳ này là thay dầu máy, vệ sinh lọc gió động cơ và lọc gió điều hòa. Ngoài ra nếu cẩn thận hơn, bạn nên nhờ các kỹ thuật viên kiểm tra mực dầu phanh, dầu hộp số, nước làm mát, nước rửa kính, … và châm thêm nếu thiếu hụt.</string>
    <string name="info_service_fix">Với hệ thống xưởng sửa chữa chuyên nghiệp chúng tôi đáp ứng được mọi nhu cầu và các tình huống phát sinh khi khách hàng sử dụng xe đồng thời cung cấp những gói dịch vụ, chăm sóc với nhiều ưu đãi nhất đến khách hàng. Các dịch vụ sửa chữa phổ biến là bao gồm: sửa chữa bề mặt, sơn sửa ô tô, sửa chữa điện lạnh, sủa chữa hệ thống lái và hệ thống treo, sửa chữa phanh,...</string>
    <string name="chi_ti_t">Chi tiết</string>
</resources>