<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="appinfo.TermOfServicePage">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="654dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/guide_booking"
                style="@style/heading_app_info"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20sp"
                android:text="Đặt lịch"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/guide_booking_detail"
                style="@style/app_info_detail_elaboration"
                android:text="@string/guide_booking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_booking" />

            <TextView
                android:id="@+id/guide_detecting"
                style="@style/heading_app_info"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="Theo dõi quá trình"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_booking_detail" />

            <TextView
                android:id="@+id/guide_detecting_detail"
                style="@style/app_info_detail_elaboration"
                android:text="@string/guide_detecting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_detecting" />

            <TextView
                android:id="@+id/guide_info"
                style="@style/heading_app_info"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="Xem thông tin cá nhân"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_detecting_detail" />

            <TextView
                android:id="@+id/guide_info_detail"
                style="@style/app_info_detail_elaboration"
                android:text="@string/guide_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_info" />

            <TextView
                android:id="@+id/guide_cart"
                style="@style/heading_app_info"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="Xem đơn hàng"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_info_detail" />

            <TextView
                android:id="@+id/guide_cart_detail"
                style="@style/app_info_detail_elaboration"
                android:text="@string/guide_cart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_cart" />

            <TextView
                android:id="@+id/guide_receive_noti"
                style="@style/heading_app_info"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="Xem thông báo"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_cart_detail" />

            <TextView
                android:id="@+id/guide_receive_noti_detail"
                style="@style/app_info_detail_elaboration"
                android:text="@string/guide_receive_noti"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guide_receive_noti" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>