<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="login.LoginActivity">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome"
        android:textColor="@color/grey_text_on_dark_back_ground"
        android:textSize="64sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center_horizontal"
        android:text="@string/client_app_description_text"
        android:textAlignment="center"
        android:textColor="@color/grey_text_on_dark_back_ground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onTextViewClick"
        android:text="@string/register_text"
        android:textColor="@color/grey_text_on_dark_back_ground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/user_info_linear_layout"
        app:layout_constraintStart_toEndOf="@+id/login_text"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onTextViewClick"
        android:text="@string/ng_nh_p"
        android:textColor="@color/grey_text_on_dark_back_ground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/user_info_linear_layout"
        app:layout_constraintEnd_toStartOf="@id/register_text"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="227dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/user_info_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField4"

            style="@style/material_edit_text_box"

            android:hint="Email/ Tên đăng nhập"
            android:elevation="5dp"

            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_account_edit_text"
                style="@style/material_edit_text"
                tools:text="123123"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField5"

            style="@style/material_edit_text_box"
            android:elevation="5dp"
            android:hint="Mật khẩu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_password_edit_text"
                style="@style/material_edit_text"

                android:layout_marginTop="18dp"
                android:inputType="textPassword"
                tools:text="12345678" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="289dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/remember_password_text"
        android:textColor="@color/grey_text_on_dark_back_ground"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/user_info_linear_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/reddish_button_background"
        android:text="@string/continue_text"
        app:backgroundTint="@color/reddish_button_color"
        app:cornerRadius="30dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/forgot_password_text"
        style="@style/normal_grey_text_on_dark_background"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password_prompt_text"
        app:layout_constraintStart_toEndOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="643dp" />


</androidx.constraintlayout.widget.ConstraintLayout>